[DevTools] Fix overlapping while editing blocked url.
BUG=527354
TBR=pfeldman

Review URL: https://codereview.chromium.org/1327893002

git-svn-id: svn://svn.chromium.org/blink/trunk@201677 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/network/blockedURLsPane.css
+++ b/front_end/network/blockedURLsPane.css
@@ -42,6 +42,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     flex: auto;
+    margin-right: 5px;
 }
 
 .blocked-url .remove-button {
